FSPA-464 #comment redesign interactive styles, code refactoring, remove odd code

--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,6 +1,6 @@
 <div class="location-container interactive-background">
   <div class="left">
-      <bd-user-circle class="initials-circle" [initials]="fullName">
+      <bd-user-circle class="initials-circle" [fullName]="fullName">
       </bd-user-circle>
       <div class="full-name-icons-container">
         <div class="full-name interactive-text">
