--- a/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
+++ b/src/app/drivers/components/driver-detail/components/driver-information/driver-information.component.html
@@ -1,7 +1,7 @@
 <div class="information-container interactive-background">
   <div class="left">
     <div class="top">
-      <bd-user-circle class="initials-circle" [initials]="fullName">
+      <bd-user-circle class="initials-circle" [fullName]="fullName">
       </bd-user-circle>
       <div class="top-right">
         <div class="full-name interactive-text">
