--- a/src/app/equipment/components/equipment-card/equipment-card.component.html
+++ b/src/app/equipment/components/equipment-card/equipment-card.component.html
@@ -4,11 +4,11 @@ class="card-section"
 (mouseleave)="onLeave()"
 (click)="onClick()">
   <div class="left">
-    <bd-user-circle
+    <bd-circle
       class="initials-circle"
       [initials]="equipmentShortTypeText"
       >
-    </bd-user-circle>
+    </bd-circle>
     <div class="equipment-make ellipsis">
       {{item.make}}
     </div>
