--- a/src/app/equipment/components/equipment-detail/components/equipment-assignment/equipment-assignment.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-assignment/equipment-assignment.component.html
@@ -3,7 +3,7 @@
         <div class="driver-name">
             <div class="circle-container">
                 <bd-user-circle
-                    [initials]="initials">
+                    [fullName]="fullName">
                 </bd-user-circle>
             </div>
             <div class="info-container">
