--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.html
@@ -1,11 +1,11 @@
 <div class="details-container interactive-background">
     <div class="info-container interactive-background">
-        <section class="equipment-info left">
+        <section class="equipment-info">
             <div class="name-info">
                 <div class="circle">
-                    <bd-user-circle
+                    <bd-circle
                         [initials]="shortTypeText">
-                    </bd-user-circle>
+                    </bd-circle>
                 </div>
                 <div class="text">
                     <div class="name ellipsis interactive-text">{{equipment.make}} {{equipment.model}}</div>
