--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.html
@@ -1,5 +1,5 @@
 <div class="employment-container interactive-background">
-    <section class="general-info left">
+    <section class="general-info">
         <div class="vin">
             <span class="value">VIN: {{equipment.vin}}</span>
         </div>
