--- a/src/app/forms/mileage-form/mileage-form.component.scss
+++ b/src/app/forms/mileage-form/mileage-form.component.scss
@@ -18,6 +18,7 @@
     display: flex;
     min-width: 40px;
     justify-content: center;
+    background-color: $default-background;
     align-items: center;
     border-bottom: $border;
 
