--- a/src/app/loads/components/load-stop-card/load-stop-card.component.scss
+++ b/src/app/loads/components/load-stop-card/load-stop-card.component.scss
@@ -1,5 +1,18 @@
 @import '../../../../assets/styles/variables';
 
+:host {
+
+  &.active {
+    .card-section {
+      border-bottom-color: $blue;
+
+      .status-text {
+        background: $white;
+      }
+    }
+  }
+}
+
 :host-context(.interactive-panel:hover) {
   background: $white;
   transition: all $interactive-animation-time;
@@ -8,49 +21,30 @@
     color: $black;
     transition: all $interactive-animation-time;
 
-    .card-section {
-      .status {
-        opacity: 1;
-      }
+    .status-text {
+      background: $white;
     }
 
     &:hover {
       background: $light-blue;
+
+      .status-text {
+        background: $light-blue;
+      }
     }
   }
 
   &.active {
     &.card {
-      color: $silver;
+      background: $light-blue;
       transition: all $interactive-animation-time;
 
-      .card-section {
-        .status {
-          opacity: 1;
-        }
-      }
-
-      &:hover {
-        background: $mako;
+      .status-text {
+        background: $light-blue;
       }
     }
   }
 }
-
-:host-context(.active) {
-  &.card {
-    background: $mako;
-    color: $silver;
-    transition: all $interactive-animation-time;
-
-    .card-section {
-      .status {
-        opacity: 1;
-      }
-    }
-  }
-}
-
 
 .card-section {
   position: relative;
@@ -97,7 +91,7 @@
       margin-top: 5px;
 
       .start-date {
-        color: $grey;
+        color: $dark-grey;
       }
 
       .schedule {
@@ -106,7 +100,7 @@
       }
 
       .end-date {
-        color: $grey;
+        color: $dark-grey;
       }
     }
   }
@@ -142,6 +136,7 @@
     position: absolute;
     right: 35px;
     padding: 5px 0 5px 13px;
+    background: $default-background;
     line-height: 1em;
     bottom: 8px;
     justify-content: center;
@@ -153,7 +148,6 @@
     width: 12px;
     height: 12px;
     background: $black;
-    opacity: $status-opacity;
     bottom: 13px;
     border-radius: $form-control-height;
   }
