--- a/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
+++ b/src/app/loads/components/load-stop-cards/load-stop-cards.component.scss
@@ -6,19 +6,19 @@
 }
 
 load-stop-card {
-  background: transparent;
+  background: $default-background;
   color: $dark-grey;
 
-  &.active {
-    color: $black;
+  .status-text {
+    background: $default-background;
   }
 
-  &.active,
-  &:hover {
-    background: $light-blue;
+  &.active {
+    background: $white;
+    color: $black;
 
     .status-text {
-      background: $light-blue;
+      background: $white;
     }
   }
 }
