--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   height: $form-control-height;
   padding: 0 $default-margin;
-  background: $serenity;
+  background: $default-background;
   border-bottom: $border;
 
   .bd-switch-label {
