--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: $form-control-height;
     padding: 0 $default-margin;
-    background-color: $serenity;
+    background-color: $default-background;
     box-shadow: inherit;
     border-bottom: $border;
     outline: 0;
