--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -48,7 +48,7 @@
   border-bottom: $border;
   margin-bottom: 0;
   flex-flow: row wrap;
-  background-color: $serenity;
+  background-color: $default-background;
   box-shadow: inherit;
 
   .bd-label {
