--- a/src/app/shared/components/form-navigation/form-navigation.component.scss
+++ b/src/app/shared/components/form-navigation/form-navigation.component.scss
@@ -13,7 +13,7 @@ $container-height: $horizontal-scroll-container-height;
 
   .form-navigation {
     padding: $default-margin $default-margin 0;
-    background: $serenity;
+    background: $default-background;
     border-radius: $default-border-radius;
     border-bottom: $border;
 
