--- a/src/app/base/base-card/base-card.component.scss
+++ b/src/app/base/base-card/base-card.component.scss
@@ -2,6 +2,19 @@
 @import '../../../assets/styles/styles';
 @import '../../../assets/styles/mixins';
 
+:host {
+
+  &.active {
+    .card-section {
+      border-bottom-color: $blue;
+
+      .status-text {
+        background: $white;
+      }
+    }
+  }
+}
+
 .card-section {
   position: relative;
   display: flex;
@@ -64,7 +77,6 @@
     width: 12px;
     height: 12px;
     background: $black;
-    opacity: $status-opacity;
     bottom: 13px;
     border-radius: $form-control-height;
   }
@@ -78,12 +90,6 @@
     color: $black;
     transition: all $interactive-animation-time;
 
-    .card-section {
-      .status {
-        opacity: 1;
-      }
-    }
-
     &:hover {
       background: $light-blue;
     }
@@ -91,32 +97,8 @@
 
   &.active {
     &.card {
-      color: $silver;
+      background: $light-blue;
       transition: all $interactive-animation-time;
-
-      .card-section {
-        .status {
-          opacity: 1;
-        }
-      }
-
-      &:hover {
-        background: $mako;
-      }
-    }
-  }
-}
-
-:host-context(.active) {
-  &.card {
-    background: $mako;
-    color: $silver;
-    transition: all $interactive-animation-time;
-
-    .card-section {
-      .status {
-        opacity: 1;
-      }
     }
   }
 }
