--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
@@ -6,15 +6,16 @@ $element-height: 18px;
 .basic-information-container {
   display: flex;
   width: 100%;
+  background: $default-background;
   font-size: $tiny-font-size;
   line-height: $element-height;
-  border-bottom: $default-border;
+  border-bottom: $border;
 
   .left {
     display: flex;
     width: 50%;
     padding: $default-margin;
-    border-right: $default-border;
+    border-right: $border;
 
     .name-type {
       overflow: hidden;
