--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -7,7 +7,7 @@ class="card-section"
     <div>
       <bd-user-circle
         class="initials-circle"
-        [initials]="fullName">
+        [fullName]="fullName">
       </bd-user-circle>
     </div>
     <div class="driver-full-name ellipsis">
