--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.scss
@@ -3,17 +3,18 @@
 
 .employment-container {
   display: flex;
+  background: $default-background;
   color: $dark-grey;
   font-size: $tiny-font-size;
   border-radius: $default-border-radius;
-  border-bottom: $default-border;
+  border-bottom: $border;
 
   section {
     width: 50%;
     padding: $default-margin;
 
     &:first-of-type {
-      border-right: $default-border;
+      border-right: $border;
     }
   }
 }
