--- a/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-mileage/equipment-mileage.component.scss
@@ -5,8 +5,9 @@
   display: flex;
   height: 35px;
   padding: 0 $default-margin;
+  background: $default-background;
   font-size: $tiny-font-size;
-  border-bottom: $default-border;
+  border-bottom: $border;
   align-items: center;
   justify-content: space-between;
 
