--- a/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.html
+++ b/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.html
@@ -1,7 +1,7 @@
 <div class="requirements-container interactive-background">
     <div class="main-requirements interactive-background">
-        <section class="driver-count left interactive-text">{{driverRequirement}}</section>
-        <section class="power-unit-type left interactive-text">{{requiredPowerUnitType}}</section>
+        <section class="driver-count interactive-text">{{driverRequirement}}</section>
+        <section class="power-unit-type interactive-text">{{requiredPowerUnitType}}</section>
         <section class="trailer-type interactive-text">{{requiredTrailerType}}</section>
     </div>
     <div class="additional-requirements"
