--- a/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
+++ b/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
@@ -6,19 +6,20 @@ $element-height: 35px;
 .requirements-container {
   font-size: $tiny-font-size;
   line-height: $tiny-font-size;
-  border-bottom: $default-border;
+  border-bottom: $border;
+  background-color: $default-background;
   border-radius: $default-border-radius;
 
   .main-requirements {
     display: flex;
     height: $element-height;
-    border-bottom: $default-border;
+    border-bottom: $border;
 
     section {
       display: flex;
       width: calc(100% / 3);
       padding: 0 $default-margin;
-      border-right: $default-border;
+      border-right: $border;
       align-items: center;
 
       &:last-of-type {
