--- a/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
+++ b/src/app/shared/components/bd-notification-card/components/message-card/message-card.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="bottom">
     <bd-user-circle
-      [initials]="initials">
+      [fullName]="fullName">
     </bd-user-circle>
     <div class="right">
       <div class="title">{{notification.sender.firstName}} {{notification.sender.lastName}}</div>
