--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -17,6 +17,8 @@ $horizon: #597c97;
 $mako: #485158;
 $light-blue: #f5fefe;
 $serenity: #f5f9fc;
+$default-background: #fafcfd;
+
 $red: #fc3b3b;
 $light-red: #ffebeb;
 $dark-blue: #3d454d;
@@ -83,7 +85,7 @@ $status-opacity: .5;
 $top-panel-icon-size: 19px;
 
 // animation duration
-$interactive-animation-time: 500ms;
+$interactive-animation-time: 250ms;
 
 @font-face {
   font-family: 'SFUIText-Regular';
