--- a/src/app/companies/components/company-cards/company-cards.component.scss
+++ b/src/app/companies/components/company-cards/company-cards.component.scss
@@ -3,17 +3,21 @@
 company-card {
   background: $default-background;
   color: $dark-grey;
+  transition: all $interactive-animation-time;
 
   .status-text {
     background: $default-background;
+    transition: all $interactive-animation-time;
   }
 
   &.active {
     background: $white;
     color: $black;
+    transition: all $interactive-animation-time;
 
     .status-text {
       background: $white;
+      transition: all $interactive-animation-time;
     }
   }
 }
