--- a/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
+++ b/src/app/shared/components/bd-view-detail-section/bd-view-detail-section.component.scss
@@ -27,8 +27,9 @@
 
         .add-button,
         .edit-button {
-          display: none;
+          visibility: hidden;
           margin-left: 5px;
+          opacity: 0;
           transition: all $interactive-animation-time;
         }
       }
@@ -53,6 +54,8 @@
       .buttons-panel {
         bd-form-button {
           display: flex;
+          opacity: 1;
+          visibility: visible;
           transition: all $interactive-animation-time;
         }
       }
