--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.scss
@@ -5,6 +5,7 @@ $element-height: 18px;
 
 .location-container {
   @include driver-view-form-container;
+  position: relative;
 
   .left {
     display: flex;
