--- a/src/assets/styles/font-icons.scss
+++ b/src/assets/styles/font-icons.scss
@@ -238,3 +238,15 @@
     content: '\e926';
   }
 }
+
+.icon-menu {
+  &:before {
+    content: '\e924';
+  }
+}
+
+.icon-reorder {
+  &:before {
+    content: '\e923';
+  }
+}
