--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,23 +1,25 @@
-<div class="location-container interactive-background">
-  <div class="left">
-      <bd-user-circle class="initials-circle" [initials]="fullName">
-      </bd-user-circle>
-      <div class="full-name-icons-container">
-        <div class="full-name interactive-text">
-          {{contact.firstName}} {{contact.lastName}}
+<list-item-control [showDefaultButtons]="true" (edit)="onEdit()">
+  <div class="location-container interactive-background">
+    <div class="left">
+        <bd-user-circle class="initials-circle" [initials]="fullName">
+        </bd-user-circle>
+        <div class="full-name-icons-container">
+          <div class="full-name interactive-text">
+            {{contact.firstName}} {{contact.lastName}}
+          </div>
+          <div class="icons">
+            <span class="icon-mail"></span>
+            <span class="icon-call"></span>
+            <span class="icon-message"></span>
+          </div>
         </div>
-        <div class="icons">
-          <span class="icon-mail"></span>
-          <span class="icon-call"></span>
-          <span class="icon-message"></span>
-        </div>
+    </div>
+    <div class="right">
+      <div class="position">{{contact.position}}</div>
+      <div class="location-name-container">
+        <span class="icon-location"></span>
+        <span>{{contact.location.name}}</span>
       </div>
-  </div>
-  <div class="right">
-    <div class="position">{{contact.position}}</div>
-    <div class="location-name-container">
-      <span class="icon-location"></span>
-      <span>{{contact.location.name}}</span>
     </div>
   </div>
-</div>
+</list-item-control>
