FSPA-464 added animation to background when mouse leave

--- a/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
+++ b/src/app/companies/components/company-detail/components/company-basic-information/company-basic-information.component.scss
@@ -10,6 +10,7 @@ $element-height: 18px;
   font-size: $tiny-font-size;
   line-height: $element-height;
   border-bottom: $border;
+  transition: background-color $interactive-animation-time;
 
   .left {
     display: flex;
