--- a/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-license/driver-license.component.scss
@@ -9,6 +9,7 @@ $element-height: 18px;
   line-height: $element-height;
   border-bottom: $border;
   background-color: $default-background;
+  transition: background-color $interactive-animation-time;
 
   .top {
     display: flex;
