--- a/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
+++ b/src/app/drivers/components/driver-detail/components/driver-payment-type/driver-payment-type.component.scss
@@ -11,6 +11,7 @@
   background-color: $default-background;
   margin-top: 10px;
   border-bottom: $border;
+  transition: background-color $interactive-animation-time;
 
   .rate {
     margin-left: 5px;
