--- a/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-details/equipment-details.component.scss
@@ -9,6 +9,7 @@
   font-size: $tiny-font-size;
   border-bottom: $border;
   border-radius: $default-border-radius;
+  transition: background-color $interactive-animation-time;
 
   .info-container {
     display: flex;
