--- a/src/app/forms/mileage-form/mileage-form.component.scss
+++ b/src/app/forms/mileage-form/mileage-form.component.scss
@@ -21,6 +21,7 @@
     background-color: $default-background;
     align-items: center;
     border-bottom: $border;
+    transition: background-color $interactive-animation-time;
 
     button {
       padding: 0 $default-margin;
