--- a/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
+++ b/src/app/loads/components/load-detail/components/requirements-detail/requirements-detail.component.scss
@@ -9,6 +9,7 @@ $element-height: 35px;
   border-bottom: $border;
   background-color: $default-background;
   border-radius: $default-border-radius;
+  transition: background-color $interactive-animation-time;
 
   .main-requirements {
     display: flex;
