--- a/src/app/loads/components/load-detail/components/trip-view/trip-view.component.scss
+++ b/src/app/loads/components/load-detail/components/trip-view/trip-view.component.scss
@@ -47,6 +47,7 @@ $text-margin: 5px;
     background: $default-background;
     border-radius: $default-border-radius;
     flex-direction: row;
+    transition: background-color $interactive-animation-time;
 
     .left-panel {
       display: flex;
