--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -50,6 +50,7 @@
   flex-flow: row wrap;
   background-color: $default-background;
   box-shadow: inherit;
+  transition: background-color $interactive-animation-time;
 
   .bd-label {
     display: flex;
