--- a/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.scss
+++ b/src/app/equipment/components/equipment-detail/components/equipment-employment/equipment-employment.component.scss
@@ -8,6 +8,7 @@
   font-size: $tiny-font-size;
   border-radius: $default-border-radius;
   border-bottom: $border;
+  transition: background-color $interactive-animation-time;
 
   section {
     width: 50%;
