--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.scss
@@ -7,6 +7,7 @@
   padding: 0 $default-margin;
   background: $default-background;
   border-bottom: $border;
+  transition: background-color $interactive-animation-time;
 
   .bd-switch-label {
     display: flex;
