--- a/src/app/companies/components/company-detail/components/company-address/company-address.component.html
+++ b/src/app/companies/components/company-detail/components/company-address/company-address.component.html
@@ -1,4 +1,4 @@
-<list-item-control [showDefaultButtons]="true" (edit)="onEdit()">
+<default-component-action-panel (edit)="onEdit()">
   <div class="location-container interactive-background">
     <div class="left">
       <div class="name interactive-text">
@@ -15,4 +15,4 @@
       <bd-contact-info [contactCollection]="location.contactInfo"></bd-contact-info>
     </div>
   </div>
-</list-item-control>
+</default-component-action-panel>
