--- a/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
+++ b/src/app/companies/components/company-detail/components/company-contact/company-contact.component.html
@@ -1,4 +1,4 @@
-<list-item-control [showDefaultButtons]="true" (edit)="onEdit()">
+<default-component-action-panel (edit)="onEdit()">
   <div class="location-container interactive-background">
     <div class="left">
         <bd-user-circle class="initials-circle" [initials]="fullName">
@@ -22,4 +22,4 @@
       </div>
     </div>
   </div>
-</list-item-control>
+</default-component-action-panel>
